--- a/index.html
+++ b/index.html
@@ -103,9 +103,26 @@
       </ul>
     </div>
   </section>
-
 </main>
 
+<script src="https://lf-cdn.coze.cn/obj/unpkg/flow-platform/chat-app-sdk/1.2.0-beta.19/libs/cn/index.js"></script>
 
+<script>
+  new CozeWebSDK.WebChatClient({
+    config: {
+      bot_id: '7584791113786720319',
+    },
+    componentProps: {
+      title: 'Coze',
+    },
+    auth: {
+      type: 'token',
+      token: 'pat_********',
+      onRefreshToken: function () {
+        return 'pat_********'
+      }
+    }
+  });
+</script>
 </body>
 </html>
