--- a/exp2_voice_agent.html
+++ b/exp2_voice_agent.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>实验四：从零开始构建语音AI代理项目</title>
+  <title>实验二：语音AI代理</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,16 +10,17 @@
   <div class="logo">多媒体课程实验在线平台</div>
   <nav class="top-nav">
     <a href="index.html">首页</a>
-    <a href="exp1_video.html">实验一：AI视频编辑</a>
-    <a href="exp2_robot.html">实验二：机械臂垃圾分类</a>
-    <a href="exp3_rag.html">实验三：RAG系统</a>
-    <a href="exp4_voice_agent.html" class="active">实验四：语音AI代理</a>
+    <a href="exp1_rag.html">实验一：RAG系统</a>
+    <a href="exp2_voice_agent.html" class="active">实验二：语音AI代理</a>
+    <a href="exp3_robot.html">实验三：机械臂垃圾分类</a>
+    <a href="exp4_video.html">实验四：AI视频编辑</a>
+    <a href="exp5_web_design.html">实验五：网页制作</a>
   </nav>
 </header>
 
 <main class="container">
   <header class="sub-header">
-    <h1 id="top">实验四：从零开始构建语音AI代理项目</h1>
+    <h1 id="top">实验二：语音AI代理</h1>
     <p class="sub-meta">
       目的：学习构建基于ReAct框架的智能语音AI代理，掌握LLM集成、工具调用和语音交互技术。
     </p>
@@ -484,9 +485,10 @@ if __name__ == "__main__":
 
   <div class="sub-nav">
     <a href="index.html">返回首页</a> |
-    <a href="exp1_video.html">前往实验一：AI视频编辑</a> |
-    <a href="exp2_robot.html">前往实验二：机械臂垃圾分类</a> |
-    <a href="exp3_rag.html">前往实验三：RAG系统</a> |
+    <a href="exp1_rag.html">前往实验一：RAG系统</a> |
+    <a href="exp3_robot.html">前往实验三：机械臂垃圾分类</a> |
+    <a href="exp4_video.html">前往实验四：AI视频编辑</a> |
+    <a href="exp5_web_design.html">前往实验五：网页制作</a> |
     <a href="#top">返回顶部</a>
   </div>
 </main>
