--- a/exp4_video.html
+++ b/exp4_video.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>实验一：AI工具辅助视频编辑</title>
+  <title>实验四：AI视频编辑</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
 
 <main class="container">
   <header class="sub-header">
-    <h1 id="top">实验一：AI工具辅助视频编辑</h1>
+    <h1 id="top">实验四：AI视频编辑</h1>
     <p class="sub-meta">
       视频编辑目标：掌握专业的编辑软件，并学会一两种 AI 视频编辑工具（如剪映、蝉镜数字人等）。
     </p>
