--- a/index.html
+++ b/index.html
@@ -31,7 +31,27 @@
       <img src="图片/79d52971-498a-4e04-ac6a-7c1d13e6e900.png" alt="多媒体课程实验示意图" style="max-width: 100%; border-radius: 12px;">
     </div>
   </section>
-
+  <section class="card-grid">
+    <h2>多媒体技术课程介绍</h2>
+    <p class="hint">
+      本课程主要介绍多媒体技术的基础概念与应用实践，涵盖音频、视频、图像处理及交互式网页多媒体展示等内容。
+    </p>
+    <div class="section">
+      <h3>课程主要内容</h3>
+      <ul>
+        <li>多媒体基础概念：文本、图像、音频、视频及其编码方式。</li>
+        <li>多媒体编辑工具的使用：如图像处理软件、音视频编辑软件等。</li>
+        <li>网页多媒体技术：HTML5 中的音频、视频标签及常用属性。</li>
+        <li>交互设计与用户体验：通过导航、布局和多媒体元素提升交互性。</li>
+      </ul>
+      <h3>课程特色与实践</h3>
+      <ul>
+        <li>结合实际案例开展实验，如 AI 视频编辑、机械臂垃圾分类演示、RAG 问答系统展示等。</li>
+        <li>鼓励学生结合 AI 工具进行创意设计和作品优化。</li>
+        <li>通过在线实验平台集中展示各次实验的说明与成果。</li>
+      </ul>
+    </div>
+  </section>
   <section class="card-grid">
     <h2>实验入口</h2>
     <div class="experiment-buttons">
@@ -82,31 +102,10 @@
     </div>
   </section>
 
-  <section class="card-grid">
-    <h2>多媒体技术课程介绍</h2>
-    <p class="hint">
-      本课程主要介绍多媒体技术的基础概念与应用实践，涵盖音频、视频、图像处理及交互式网页多媒体展示等内容。
-    </p>
-    <div class="section">
-      <h3>课程主要内容</h3>
-      <ul>
-        <li>多媒体基础概念：文本、图像、音频、视频及其编码方式。</li>
-        <li>多媒体编辑工具的使用：如图像处理软件、音视频编辑软件等。</li>
-        <li>网页多媒体技术：HTML5 中的音频、视频标签及常用属性。</li>
-        <li>交互设计与用户体验：通过导航、布局和多媒体元素提升交互性。</li>
-      </ul>
-      <h3>课程特色与实践</h3>
-      <ul>
-        <li>结合实际案例开展实验，如 AI 视频编辑、机械臂垃圾分类演示、RAG 问答系统展示等。</li>
-        <li>鼓励学生结合 AI 工具进行创意设计和作品优化。</li>
-        <li>通过在线实验平台集中展示各次实验的说明与成果。</li>
-      </ul>
-    </div>
-  </section>
+  
 </main>
 
 <script src="https://lf-cdn.coze.cn/obj/unpkg/flow-platform/chat-app-sdk/1.2.0-beta.19/libs/cn/index.js"></script>
-
 <script>
   new CozeWebSDK.WebChatClient({
     config: {
@@ -117,9 +116,9 @@
     },
     auth: {
       type: 'token',
-      token: 'pat_********',
+      token: 'pat_TxeM8NPDD9NlneLjTpjfeWMQEzORPeVHv77kg8vNqcYJSnTJVVOiejTmwZFuzTlh',
       onRefreshToken: function () {
-        return 'pat_********'
+        return 'pat_TxeM8NPDD9NlneLjTpjfeWMQEzORPeVHv77kg8vNqcYJSnTJVVOiejTmwZFuzTlh'
       }
     }
   });
